objects/MergeObject4__c.object
<CustomObject>
    <fields>
        <fullName>MergeObj4field1__c</fullName>
        <description>TEst67</description>
        <label>MergeObj4field1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MergeObj4field2__c</fullName>
        <description>TEt898</description>
        <label>MergeObj4field2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MergeObj4field3__c</fullName>
        <label>MergeObj4field3</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>MergeObject4</label>
    <nameField>
        <label>MergeObject4 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MergeObject4s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>